samples/helloworld/.refactoring/generated/gateway-api/helloworld-versions.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  ports:
    - name: http
      port: 5000
  selector:
    app: helloworld
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  ports:
    - name: http
      port: 5000
  selector:
    app: helloworld
    version: v2
