samples/helloworld/.refactoring/generated/gateway-api/helloworld-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
    - name: helloworld-gateway
  rules:
    - backendRefs:
        - name: helloworld
          port: 5000
      matches:
        - path:
            type: Exact
            value: /hello
